--- a/start/index.html
+++ b/start/index.html
@@ -2,12 +2,33 @@
 <html>
     <head>
         <title>Art Sales</title>
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     </head>
     <body>
-
-        <button class="btn btn-primary">Testing</button>
-
+        <div id="home-container">
+            <div class="r1">
+                <div class="r1-inner">
+                    <nav class="home-main-nav">
+                        <ul>
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#">About</a>
+                            </li>
+                            <li>
+                                <a href="#">Work</a>
+                            </li>
+                            <li>
+                                <a href="#">Artist</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="r2">r2</div>
+        </div>
         <!-- external scripts -->
         <script type="javascript" src="js/jquery-3.6.0.min.js"></script>
         <script type="javascript" src="bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
