--- a/start/index.html
+++ b/start/index.html
@@ -16,13 +16,13 @@
                                 <a href="#">Assign2</a>
                             </li>
                             <li>
-                                <a href="#">Home</a>
+                                <a href="index.html">Home</a>
                             </li>
                             <li>
                                 <a href="about/about.html">About</a>
                             </li>
                             <li>
-                                <a href="#">Work</a>
+                                <a href="./art-works/art-works.html">Work</a>
                             </li>
                             <li>
                                 <a href="#">Artists</a>
