--- a/start/about/about.html
+++ b/start/about/about.html
@@ -62,7 +62,7 @@
                                     <a class="nav-link" href="../art-works/art-works.html">Art Works</a>
                                   </li>
                                   <li class="nav-item">
-                                    <a class="nav-link" href="#">Artists</a>
+                                    <a class="nav-link" href="../artist/artist.html">Artists</a>
                                   </li>
                                   <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
