--- a/start/index.html
+++ b/start/index.html
@@ -25,7 +25,7 @@
                                 <a href="./art-works/art-works.html">Work</a>
                             </li>
                             <li>
-                                <a href="#">Artists</a>
+                                <a href="artist/artist.html">Artists</a>
                             </li>
                         </ul>
                     </nav>
